--- a/src/Components/Checkout Page/Checkout.css
+++ b/src/Components/Checkout Page/Checkout.css
@@ -5,7 +5,7 @@
   align-items: flex-start;
 }
 .checkout_left {
-  width: 70%;
+  flex: 0.7;
   background-color: white;
   padding: 20px;
 }
@@ -20,23 +20,13 @@
   display: flex;
   flex-wrap: wrap;
   margin: 20px 0px;
-  border-color: violet;
-}
-.subtotal {
-  text-align: right;
-  font-size: 1.47vw;
-  font-weight: 400;
-  color: rgb(7, 7, 7);
-  margin-bottom: 10px;
-}
-.subtotal_price {
-  font-weight: 900;
 }
 .checkout_right {
   display: flex;
-  width: 30%;
-  align-items: center;
+  flex: 0.3;
+  align-items: flex-end;
   flex-direction: column;
+  margin-left: 20px;
 }
 .subtotal_box {
   width: 80%;
@@ -55,9 +45,8 @@
   border-radius: 5px;
   margin-top: 10px;
 }
-.sametype_products_box {
+.suggested_item_box {
   width: 80%;
-  margin: 0 auto;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -65,6 +54,6 @@
   padding: 20px;
   margin-top: 15px;
 }
-.sametype_products_box_title {
+.suggested_item_box_title {
   font-size: 1vw;
 }
