--- a/src/Components/Common Components/Header.css
+++ b/src/Components/Common Components/Header.css
@@ -4,10 +4,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* position: sticky;
-  top: 0; */
+  position: sticky;
+  top: 0;
   padding-right: 10px;
   z-index: 100;
+}
+.signin {
+  cursor: pointer;
 }
 .logo {
   width: 95px;
