--- a/src/Components/Checkout Page/Emptycart.css
+++ b/src/Components/Checkout Page/Emptycart.css
@@ -1,14 +1,11 @@
 .emptycart {
-  width: 100%;
-  height: 100%;
   display: flex;
-  align-items: center;
-  padding: 20px;
+  padding: 2vw;
 }
 .emptycart_image {
-  margin-right: 15px;
-  border-radius: 40%;
-  height: 15%;
+  margin-right: 1.5vw;
+  border-radius: 40vw;
+  height: 15vw;
   object-fit: contain;
   border: 1px solid rgb(145, 211, 236);
 }
