--- a/src/Components/Common Components/Header.css
+++ b/src/Components/Common Components/Header.css
@@ -1,40 +1,34 @@
 .header {
-  height: 65px;
+  width: 100%;
+  height: 6vw;
   background-color: #0e172b;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
+  padding: 10px 10px;
+  z-index: 100;
   position: sticky;
   top: 0;
-  padding-right: 10px;
-  z-index: 100;
-}
-.signin {
-  cursor: pointer;
 }
 .logo {
-  width: 95px;
+  width: 7vw;
   object-fit: contain;
-  margin: 0 15px;
   margin-top: 10px;
-  padding: 5px;
 }
 .search_bar {
   display: flex;
   align-items: center;
-  flex: 1;
-  margin: 0px 15px;
+  width: 50vw;
 }
 .search_input {
-  height: 20px;
-  padding: 10px;
-  width: 100%;
+  height: 3vw;
+  padding: 5px;
+  width: 95%;
   border: none;
 }
 .search_icon {
-  padding: 5px;
-  height: 30px !important;
-  width: 40px !important;
+  padding: 0.5vw;
+  font-size: 3vw !important;
   background-color: #eeb262;
   color: black !important;
 }
@@ -46,8 +40,7 @@
 .header_field {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  margin: 0px 10px;
+  margin: 0px 1vw;
   color: white;
 }
 .delivery_place {
@@ -55,32 +48,38 @@
   display: flex;
   align-items: flex-end;
 }
+.location_icon {
+  font-size: 2vw !important;
+}
 .header_field_line_one {
-  font-size: 12px;
-  padding: 3px 0px;
+  font-size: 1vw;
   color: rgb(233, 230, 230);
 }
 .header_field_line_two {
-  font-size: 13px;
+  font-size: 1vw;
   font-weight: 600;
 }
 .cart {
   position: relative;
-  margin: 0px 10px;
   color: white;
 }
 .cart_icon {
-  padding: 5px;
-  height: 35px !important;
-  width: 40px !important;
+  font-size: 4.2vw !important;
 }
 .cart_count {
   position: absolute;
-  font-size: 15px;
-  padding: 1px 2px;
+  width: 1.6vw;
+  height: 1.6vw;
   font-weight: 800;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
   top: 0;
-  left: 19px;
+  left: 1.3vw;
   color: #f59b26;
   background-color: #0e172b;
+}
+.cart_count_value {
+  font-size: 1.1vw;
+  position: absolute;
 }
