--- a/src/Components/Homepage/Home.css
+++ b/src/Components/Homepage/Home.css
@@ -1,8 +1,13 @@
+.home {
+  background-color: rgb(234, 237, 237);
+  z-index: -1;
+}
 .home_image {
   width: 100%;
   z-index: -1;
-  margin-bottom: -350px;
+  margin-bottom: -25vw;
   mask-image: linear-gradient(to bottom, rgba(0, 0, 0), rgba(36, 34, 34, 0));
+  z-index: 0;
 }
 .home_container {
   display: flex;
@@ -10,6 +15,7 @@
   justify-content: center;
 }
 .home_row {
+  margin-top: 100px;
   display: flex;
   flex-wrap: wrap;
   width: 98%;
