--- a/src/Components/Homepage/Product.css
+++ b/src/Components/Homepage/Product.css
@@ -3,33 +3,31 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  padding: 5px;
   margin: 10px 1%;
-  max-height: 400px;
-  width: 20.6%;
+  min-width: 20%;
+  width: 23%;
   background-color: white;
   z-index: 1;
-  padding: 15px;
+  padding: 1.5vw;
 }
 .product_title {
   font-size: 1.6vw;
 }
 .product_more_button {
   color: rgb(62, 116, 150);
-  font-size: 13px;
+  font-size: 1vw;
   text-decoration: none;
 }
 .product_image {
-  min-height: 320px;
-  max-width: 97%;
+  width: 98%;
+  height: 25vw;
   object-fit: cover;
   margin: 10px 0px;
 }
 .sub_product_container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  min-height: 320px;
-  max-width: 97%;
+  width: 98%;
   grid-gap: 2px;
   margin: 10px 0px;
 }
