--- a/src/Components/Common Components/Header.css
+++ b/src/Components/Common Components/Header.css
@@ -11,18 +11,19 @@
   top: 0;
 }
 .logo {
+  padding-top: 1.5vw;
   width: 7vw;
   object-fit: contain;
   margin-top: 10px;
 }
 .search_bar {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   width: 50vw;
 }
 .search_input {
   height: 3vw;
-  padding: 5px;
+  padding: 0.5vw;
   width: 95%;
   border: none;
 }
