--- a/src/Components/LoginPage/Login.css
+++ b/src/Components/LoginPage/Login.css
@@ -1,5 +1,74 @@
 .login {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.logo {
+  margin: 1.1vw auto;
+  width: 8vw;
+  object-fit: contain;
+}
+.login_container {
+  width: 27vw;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  border: 0.1vw solid lightgray;
+  padding: 2vw;
+  margin-bottom: 1.2vw;
+}
+.signin_text {
+  font-size: 2.2vw;
+  font-weight: 400;
+  margin-bottom: 1.5vw;
+}
+.signin_form h5,
+input {
+  font-size: 1vw;
+  font-weight: 700;
+  margin-bottom: 0.5vw;
+}
+.signin_form input {
+  border: 0.1vw solid rgb(150, 149, 149);
+}
+.signin_form input,
+button {
+  width: 100%;
+  padding: 0.5vw;
+  border-radius: 2px;
+}
+.signin_form button {
+  font-size: 1vw;
+  margin: 1.5vw 0px;
+  cursor: pointer;
+  background-color: #f0c14b;
+  border: 0.1vw solid;
+  border-color: #a88734 #9c7e31 #846a29;
+}
+.privacy_statement {
+  font-size: 1vw;
+  font-stretch: semi-expanded;
+}
+.register_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.register_button {
+  width: 100%;
+  border-radius: 2px;
+  font-size: 1vw;
+  cursor: pointer;
+  margin-bottom: 1.5vw;
+  border: 0.1vw solid rgb(150, 149, 149);
+}
+.register_text {
+  color: rgb(90, 89, 89);
+  font-size: 1vw;
+  font-weight: 400;
+  margin-bottom: 1vw;
 }
