Created Payment Processing Page

--- a/src/Components/Checkout Page/Checkout.css
+++ b/src/Components/Checkout Page/Checkout.css
@@ -59,3 +59,9 @@
 .suggested_item_box_title {
   font-size: 1vw;
 }
+.disable {
+  cursor: "not-allowed";
+}
+.enable_button {
+  cursor: pointer;
+}
