--- a/src/Components/Homepage/Slider.css
+++ b/src/Components/Homepage/Slider.css
@@ -1,5 +1,5 @@
 .product_container {
-  width: 98%;
+  width: 100%;
   height: 25vw;
   margin: 10px 0px;
   overflow-x: hidden;
@@ -33,7 +33,7 @@
 .right_arrow_div {
   border-radius: 5px 0px 0px 5px;
 }
-.enable:hover {
+.arrow_div:hover {
   color: black;
   background-color: rgb(255, 255, 255, 1);
 }
