--- a/src/Components/Payment Page/Payment.css
+++ b/src/Components/Payment Page/Payment.css
@@ -1,6 +1,5 @@
 .payment {
   width: 100%;
-  height: 100vh;
   padding: 0 2%;
 }
 .payment_title {
@@ -43,4 +42,23 @@
 .payment_address {
   font-size: 1.2vw;
   font-weight: 400;
+}
+.payment_price_container {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2.5vw;
+  margin: 2vw auto;
+  border: 1px solid rgb(129, 128, 128);
+}
+.payment_price_container button {
+  width: 80%;
+  margin-top: 1.5vw;
+  border: none;
+  padding: 1vw;
+  font-size: 1vw;
+  background-color: #ffbb00;
+  border-radius: 5px;
+  cursor: pointer;
 }
