--- a/src/Components/LoginPage/Login.css
+++ b/src/Components/LoginPage/Login.css
@@ -17,7 +17,6 @@
   display: flex;
   flex-direction: column;
   border-radius: 5px;
-  border: 0.1vw solid lightgray;
   padding: 2vw;
   margin-bottom: 1.2vw;
 }
@@ -57,6 +56,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 1.5vw;
 }
 .register_button {
   width: 100%;
